--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,8 @@ body {
   --custom-bg-color: #bcecee;
   --custom-panel-color: rgb(34, 34, 34);
   --custom-box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.8);
-  --custom-color: rgb(20, 20, 20);
-  --custom-color-brand: #15939c;
+  --custom-color: #fff;
+  --custom-color-brand: #8e7fd1;
   --custom-color-secondary: #666;
   --custom-border: 1px solid rgb(51, 51, 51);
   --custom-border-radius: 5px;
@@ -28,7 +28,7 @@ body {
 html,
 body,
 #__next {
-  height: 250vh;
+  height: 100vh;
   width: 100vw;
   overflow-x: hidden;
 }
@@ -36,7 +36,7 @@ body,
 /* Grid */
 
 .container {
-  width: 100%;
+  width: 90%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -161,7 +161,7 @@ body,
 @media only screen and (min-width: 60em) {
   /* 960px */
   .container {
-    width: 200%;
+    width: 75%;
     max-width: 60rem;
   }
 }
@@ -330,7 +330,7 @@ button.primary,
 }
 
 .mainHeader {
-  width: 200%;
+  width: 100%;
   font-size: 1.3rem;
   margin-bottom: 20px;
 }
@@ -363,7 +363,7 @@ button.primary,
 }
 
 .form-widget .button:hover {
-  background-color: #197b94;
+  background-color: #8569c7;
 }
 
 .form-widget .button > .loader {
