--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,9 @@ body {
   --custom-bg-color: #bcecee;
   --custom-panel-color: rgb(34, 34, 34);
   --custom-box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.8);
-  --custom-color: #fff;
+  --custom-color: rgb(21, 8, 56);
   --custom-color-brand: #8e7fd1;
-  --custom-color-secondary: #666;
+  --custom-color-secondary: rgb(102, 102, 102);
   --custom-border: 1px solid rgb(51, 51, 51);
   --custom-border-radius: 5px;
   --custom-spacing: 5px;
